--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "simple-web-starter",
   "private": true,
-  "homepage": "https://jonasree.github.io/DX-Code-Generator",
   "scripts": {
     "web": "yarn dev",
     "dev:vite": "NODE_ENV=development TAMAGUI_TARGET=web vite --host --clearScreen false",
@@ -11,7 +10,9 @@
     "dev:extract": "DISABLE_EXTRACTION=false TAMAGUI_TARGET=web NODE_ENV=development webpack serve",
     "prod": "NODE_ENV=production webpack --json=dist/compilation-stats.json",
     "upgrade:tamagui": "yarn up '*tamagui*'@latest '@tamagui/*'@latest",
-    "upgrade:tamagui:canary": "yarn up '*tamagui*'@canary '@tamagui/*'@canary react-native-web-lite@canary"
+    "upgrade:tamagui:canary": "yarn up '*tamagui*'@canary '@tamagui/*'@canary react-native-web-lite@canary",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@tamagui/animations-css": "latest",
@@ -38,6 +39,7 @@
     "esbuild-loader": "^3.0.1",
     "esbuild-register": "^3.4.2",
     "file-loader": "^6.2.0",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "react-refresh": "^0.14.0",
