--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -34,4 +34,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./main
+          publish_dir: ./build
